syntax = "proto3";

package pb;
option go_package = "./pkg/pb";

import "google/protobuf/empty.proto";

service AuthService {
    rpc SignUp(SignupDataRequest) returns (google.protobuf.Empty);
    rpc Login(LoginDataRequest) returns (LoginDataResponse);
    rpc OTPLogin(OTPLoginDataRequest) returns (OTPLoginDataResponse);
}

// User SignUp
message SignupDataRequest {
    string user_name = 1;
    string first_name = 2;
    string last_name = 3;
    uint32 age = 4;
    string email = 5;
    string phone = 6;
    string password = 7;
}

// User Login
message LoginDataRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message LoginDataResponse {
    uint32 id = 1;
}

// OTP Login
message OTPLoginDataRequest {
    string otp = 1; // One Time Password generated by the system or sent to mobile
    int32 UserID = 2;
}

message OTPLoginDataResponse {
    int32 id = 1;
    string user_name = 2;
    string first_name = 3;
    string last_name = 4;
    uint32 age = 5;
    string email = 6;
    string phone = 7;
}
